--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 // after slash is the name of the images
 // alt is refering to the text discription*/––>
     <h2>Film Rec</h2>
-<img src="ima/000388780017.JPG" alt="film1" width="388" height="200">
-<img src="ima/000388780021.JPG" alt="film1" width="333" height="200">
-<img src="ima/000388780022.JPG" alt="film1" width="333" height="200">
-<img src="ima/000388780027.JPG" alt="film1" width="333" height="200">
+<img src="000388780017.JPG" alt="film1" width="388" height="200">
+<img src="000388780021.JPG" alt="film1" width="333" height="200">
+<img src="000388780022.JPG" alt="film1" width="333" height="200">
+<img src="000388780027.JPG" alt="film1" width="333" height="200">
 
-<img src="ima/000388780030.jpg" alt="film1" width="333" height="200">
-<img src="ima/000371930010.jpg" alt="film1" width="300" height="200">
-<img src="ima/000371920026.jpg" alt="film1" width="383" height="200">
-<img src="ima/000822720033.jpg" alt="film1" width="140" height="200">
+<img src="000388780030.jpg" alt="film1" width="333" height="200">
+<img src="000371930010.jpg" alt="film1" width="300" height="200">
+<img src="000371920026.jpg" alt="film1" width="383" height="200">
+<img src="000822720033.jpg" alt="film1" width="140" height="200">
 
-<img src="ima/000371920025.jpg" alt="film1" width="240" height="200">
+<img src="000371920025.jpg" alt="film1" width="240" height="200">
 
-<img src="ima/000822720004.jpg" alt="film1" width="130" height="200">
-<img src="ima/000371920004.jpg" alt="film1" width="310" height="200">
-<img src="ima/000371920021.jpg" alt="film1" width="270" height="200">
-<img src="ima/000371920008.jpg" alt="film1" width="343" height="200">
-<img src="ima/000388780015.jpg" alt="film1" width="333" height="200">
+<img src="000822720004.jpg" alt="film1" width="130" height="200">
+<img src="000371920004.jpg" alt="film1" width="310" height="200">
+<img src="000371920021.jpg" alt="film1" width="270" height="200">
+<img src="000371920008.jpg" alt="film1" width="343" height="200">
+<img src="000388780015.jpg" alt="film1" width="333" height="200">
 
 
 
